objects/Tech_Service_Update__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <description>This field is created to run APEX Code for Duplicate Line Reporting Project in Nov 07 Release</description>
        <externalId>true</externalId>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <description>This field is created to run APEX Code for Duplicate Line Reporting Project in Nov 07 Release</description>
        <externalId>true</externalId>
        <label>Product2Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>This field is created to run APEX Code for Duplicate Line Reporting Project in Nov 07 Release</description>
        <externalId>true</externalId>
        <label>ProductCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This Object is created to run APEX Code for Duplicate Line Reporting Project in Nov 07 Release</description>
    <label>Tech &amp; Service Update</label>
    <nameField>
        <label>Tech &amp; Service Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech &amp; Service Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>